Name: total
Version: 1.0.2
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Total-Library/issues
Synopsis: Exhaustive pattern matching using lenses, traversals, and prisms
Description: Use this library if you wish to hide your data type's internal
  representation while still providing a way to exhaustively pattern match on
  your type using exposed lenses, traversals, or prisms.
Category: Control
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Total-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base     >= 4       && < 4.9,
        ghc-prim >= 0.2.0.0 && < 0.4,
        void     >= 0.4     && < 0.8
    Exposed-Modules: Lens.Family.Total
    GHC-Options: -O2 -Wall
